--- a/amplify.yml
+++ b/amplify.yml
@@ -1,27 +1,22 @@
-version: 1
-frontend:
-  phases:
-    preBuild:
-      commands:
-        - npm install
-    build:
-      commands:
-        - "echo \"window.appConfig = {\" > config.js"
-        - "echo \"  AWS_ACCESS_KEY_ID: '$AWS_ACCESS_KEY_ID',\" >> config.js"
-        - "echo \"  AWS_SECRET_ACCESS_KEY: '$AWS_SECRET_ACCESS_KEY',\" >> config.js"
-        - "echo \"  AWS_REGION: '$AWS_REGION',\" >> config.js"
-        - "echo \"  AWS_BUCKET_NAME: '$AWS_BUCKET_NAME',\" >> config.js"
-        - "echo \"  FIREBASE_API_KEY: '$FIREBASE_API_KEY',\" >> config.js"
-        - "echo \"  FIREBASE_AUTH_DOMAIN: '$FIREBASE_AUTH_DOMAIN',\" >> config.js"
-        - "echo \"  FIREBASE_PROJECT_ID: '$FIREBASE_PROJECT_ID',\" >> config.js"
-        - "echo \"  FIREBASE_STORAGE_BUCKET: '$FIREBASE_STORAGE_BUCKET',\" >> config.js"
-        - "echo \"  FIREBASE_MESSAGING_SENDER_ID: '$FIREBASE_MESSAGING_SENDER_ID',\" >> config.js"
-        - "echo \"  FIREBASE_APP_ID: '$FIREBASE_APP_ID'\" >> config.js"
-        - "echo \"};\" >> config.js"
-  artifacts:
-    baseDirectory: .
-    files:
-      - '**/*'
-  cache:
-    paths:
-      - node_modules/**/*
+name: Deploy to Vercel
+
+on:
+  push:
+    branches:
+      - main
+
+jobs:
+  deploy:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Install Vercel CLI
+        run: npm install -g vercel
+
+      - name: Deploy to Vercel
+        env:
+          VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
+          API_KEY: ${{ secrets.API_KEY }}
+        run: vercel --prod --env API_KEY=${{ secrets.API_KEY }}
