--- a/package.json
+++ b/package.json
@@ -1,10 +1,15 @@
 {
+  "name": "awsfilemanager",
+  "version": "1.0.0",
+  "main": "app.js",
   "scripts": {
     "build": "webpack --mode production",
     "dev": "webpack --mode development"
   },
   "devDependencies": {
-    "webpack": "^5.x.x",
-    "webpack-cli": "^4.x.x"
+    "webpack": "^5.89.0",
+    "webpack-cli": "^5.1.4",
+    "html-webpack-plugin": "^5.5.0",
+    "copy-webpack-plugin": "^11.0.0"
   }
 }
