--- a/amplify.yml
+++ b/amplify.yml
@@ -6,16 +6,27 @@ frontend:
         - npm install
     build:
       commands:
-        - export AWS_REGION=${AWS_REGION}
-        - export AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
-        - export AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
-        - export AWS_BUCKET_NAME=${AWS_BUCKET_NAME}
-        - export FIREBASE_API_KEY=${FIREBASE_API_KEY}
-        - export FIREBASE_AUTH_DOMAIN=${FIREBASE_AUTH_DOMAIN}
-        - export FIREBASE_PROJECT_ID=${FIREBASE_PROJECT_ID}
-        - export FIREBASE_STORAGE_BUCKET=${FIREBASE_STORAGE_BUCKET}
-        - export FIREBASE_MESSAGING_SENDER_ID=${FIREBASE_MESSAGING_SENDER_ID}
-        - export FIREBASE_APP_ID=${FIREBASE_APP_ID}
+        - echo "Building with environment variables"
+        - node -e "console.log('AWS_BUCKET_NAME:', process.env.AWS_BUCKET_NAME)"
+        - >
+          REACT_APP_CONFIG=$(cat << EOF
+          {
+            "AWS_REGION": "${AWS_REGION}",
+            "AWS_ACCESS_KEY_ID": "${AWS_ACCESS_KEY_ID}",
+            "AWS_SECRET_ACCESS_KEY": "${AWS_SECRET_ACCESS_KEY}",
+            "AWS_BUCKET_NAME": "${AWS_BUCKET_NAME}",
+            "FIREBASE_CONFIG": {
+              "apiKey": "${FIREBASE_API_KEY}",
+              "authDomain": "${FIREBASE_AUTH_DOMAIN}",
+              "projectId": "${FIREBASE_PROJECT_ID}",
+              "storageBucket": "${FIREBASE_STORAGE_BUCKET}",
+              "messagingSenderId": "${FIREBASE_MESSAGING_SENDER_ID}",
+              "appId": "${FIREBASE_APP_ID}"
+            }
+          }
+          EOF
+          )
+        - echo $REACT_APP_CONFIG > ./src/config.json
         - npm run build
   artifacts:
     baseDirectory: dist
