--- a/amplify.yml
+++ b/amplify.yml
@@ -6,7 +6,21 @@ frontend:
         - npm install
     build:
       commands:
-        - echo '{"AWS_REGION":"'$AWS_REGION'","AWS_ACCESS_KEY_ID":"'$AWS_ACCESS_KEY_ID'","AWS_SECRET_ACCESS_KEY":"'$AWS_SECRET_ACCESS_KEY'","AWS_BUCKET_NAME":"'$AWS_BUCKET_NAME'","FIREBASE_CONFIG":{"apiKey":"'$FIREBASE_API_KEY'","authDomain":"'$FIREBASE_AUTH_DOMAIN'","projectId":"'$FIREBASE_PROJECT_ID'","storageBucket":"'$FIREBASE_STORAGE_BUCKET'","messagingSenderId":"'$FIREBASE_MESSAGING_SENDER_ID'","appId":"'$FIREBASE_APP_ID'"}}' > ./src/config.json
+        - mkdir -p src/images
+        - echo "window.appConfig = {
+            AWS_REGION: '${AWS_REGION}',
+            AWS_ACCESS_KEY_ID: '${AWS_ACCESS_KEY_ID}',
+            AWS_SECRET_ACCESS_KEY: '${AWS_SECRET_ACCESS_KEY}',
+            AWS_BUCKET_NAME: '${AWS_BUCKET_NAME}',
+            FIREBASE_CONFIG: {
+              apiKey: '${FIREBASE_API_KEY}',
+              authDomain: '${FIREBASE_AUTH_DOMAIN}',
+              projectId: '${FIREBASE_PROJECT_ID}',
+              storageBucket: '${FIREBASE_STORAGE_BUCKET}',
+              messagingSenderId: '${FIREBASE_MESSAGING_SENDER_ID}',
+              appId: '${FIREBASE_APP_ID}'
+            }
+          };" > src/config.js
         - npm run build
   artifacts:
     baseDirectory: dist
