--- a/amplify.yml
+++ b/amplify.yml
@@ -22,7 +22,7 @@ frontend:
               \"messagingSenderId\": \"${FIREBASE_MESSAGING_SENDER_ID}\",
               \"appId\": \"${FIREBASE_APP_ID}\"
             }
-          };" > ./src/config.js
+          };" > src/config.js
         - npm run build
   artifacts:
     baseDirectory: dist
