--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
     "version": "1.0.0",
     "main": "app.js",
     "scripts": {
-        "build": "webpack --mode production",
-        "dev": "webpack --mode development"
+        "start":"node --env-file=.env app.js"
     },
     "devDependencies": {
         "copy-webpack-plugin": "^11.0.0",
